@@ -1,5 +1,5 @@
 /*
-    Copyright 2011-2012, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2011-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -18,14 +18,14 @@ FSL_TEST_SUITE( data_transmission );
 
 namespace {
     bool embed_acks() {
-        boost::asio::io_service service;
+        std::auto_ptr<boost::asio::io_service> service(new boost::asio::io_service);
         boost::asio::ip::tcp::acceptor server(
-            service, boost::asio::ip::tcp::endpoint(
+            *service, boost::asio::ip::tcp::endpoint(
                 host("0.0.0.0").address(), 6218));
         std::auto_ptr< boost::asio::ip::tcp::socket > sock(
-            new boost::asio::ip::tcp::socket( service ));
+            new boost::asio::ip::tcp::socket(*service));
         server.accept(*sock);
-        network_connection cnx(sock);
+        network_connection cnx(service, sock);
 
         std::vector<unsigned char> data(0x8000);
         for ( std::size_t block(0); block < 8; ++block) {
@@ -66,14 +66,14 @@ namespace {
 #endif
 
     bool ack_at_end() {
-        boost::asio::io_service service;
+        std::auto_ptr<boost::asio::io_service> service(new boost::asio::io_service);
         boost::asio::ip::tcp::acceptor server(
-            service, boost::asio::ip::tcp::endpoint(
+            *service, boost::asio::ip::tcp::endpoint(
                 host("0.0.0.0").address(), 6217));
         std::auto_ptr< boost::asio::ip::tcp::socket > sock(
-            new boost::asio::ip::tcp::socket( service ));
+            new boost::asio::ip::tcp::socket(*service));
         server.accept(*sock);
-        network_connection cnx(sock);
+        network_connection cnx(service, sock);
 
         std::vector<unsigned char> data(0x8000);
         for ( std::size_t block(0); block < c_blocks; ++block )
